@@ -54,3 +54,4 @@ Fixes/Patches incorporated from:
 	Erik Hollensbe
 	Srinivas Devarakonda
 	Jason Hihn
+	Matthias Klose
